--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ description: My website built using Jekyll
 # List of links in the navigation bar
 navbar-links:
   CV: "cv.pdf"
+  Photos: "photos"
   Contact: "contact"
 
 # Image to show in the navigation bar - image must be a square (width = height)
