--- a/_config.yml
+++ b/_config.yml
@@ -36,15 +36,15 @@ navbar-links:
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
-navbar-children-col: "#F5F5F5"
-page-col: "#FFFFFF"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#F5F5F5"
+navbar-col: "#dad7cb"
+navbar-text-col: "#820000"
+navbar-children-col: "#dad7cb"
+page-col: "#F9F6EF"
+link-col: "#006CB8"
+hover-col: "#00548f"
+footer-col: "#dad7cb"
 footer-text-col: "#777777"
-footer-link-col: "#404040"
+footer-link-col: "#006CB8"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
