--- a/_config.yml
+++ b/_config.yml
@@ -87,6 +87,7 @@ social-network-links:
 #  email: "someone@example.com"
 #  facebook: deanattali
   github: shubhamchandak94
+  googlescholar: "citations?user=t1u0f5QAAAAJ"
 #  twitter: daattali
 #  reddit: yourname
 #  linkedin: daattali
