--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ social-network-links:
   googlescholar: "citations?user=t1u0f5QAAAAJ"
 #  twitter: daattali
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: shubham-chandak-a270ba202
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
